--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,11 +32,10 @@ jobs:
         run: npm run lint:all
       - name: Tests
         run: npm run test:all
-      - name: Upload results to Codecov
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          slug: stevenvachon/website-backend
       - name: Production builds
         run: npm run build:all
       - name: AWS CLI version
