--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "website-backend",
-  "version": "3.0.0-alpha",
+  "version": "3.0.0",
   "license": "UNLICENSED",
   "author": "Steven Vachon <contact@svachon.com> (https://svachon.com)",
   "repository": "github:stevenvachon/website-backend",
